small changes in nav input

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <!-- <li><button></button></li> -->
       </span>
       <div>
-        <input class="nav-input" type="text" value="Leave Your Thaught Here" />
+        <input
+          class="nav-input"
+          type="text"
+          value="Distracted? Leave Your Thoughts.."
+        />
       </div>
       <span class="right-buttons">
         <li>
