works on footer

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       </div>
     </div>
 
-    <section></section>
+    <footer class="footer">
+      <button class="fullscreen-button">
+        <img src="./assets/fullscreen-icon.png" alt="" />
+      </button>
+    </footer>
   </body>
 </html>
